# MAIA

./: Machine_earning_No_supervisado
01 Machine Learning/00_Proyecto/: Datos_Etapa-3.xlsx  Etapa_1_proyecto_Alejandra_Ossa_Yepes.ipynb  Etapa_2_proyecto_Alejandra_Ossa_Yepes.ipynb  Etapa_3_proyecto_Alejandra_Ossa_Yepes.ipynb  Proyectos_Naipes-MacBook Pro de Alejandra.docx  Proyectos_Naipes.docx  Proyectos_Naipes_Alejandra_Ossa.docx
01 Machine Learning/01_Taller-RegresionLineal/: PML-Taller-RegresionLineal.ipynb
01 Machine Learning/02_PML-Tutorial-Polinomial/: PML-Tutorial-Lasso.ipynb  PML-Tutorial-Polinomial.ipynb  PML-Tutorial-Polinomial_2023_09_04_13_25_10.ipynb  PML-Tutorial-Ridge.ipynb
01 Machine Learning/03_Taller-RegresionLogistica/: PML-Taller-RegresionLogistica.ipynb
01 Machine Learning/04_Algoritmos_Clasificacion/: PML-Tutorial-Arboles.ipynb  PML-Tutorial-KNN.ipynb
01 Machine Learning/07_Kmeans/: PML-Tutorial-KMeans.ipynb
01 Machine Learning/07_Taller-KMeans/: PML-Taller-KMeans.ipynb
03 Etica_IA/: 18.docx  Actividad_reflexion_Alejandra_ossa.docx  Dilema_etico_Alejandra_Ossa_Yepes.docx  Proyecto_final.docx  Proyecto_final_Alejandra_ossa_yepes.docx  Responsabilidad_armas_autonomas_Alejandra_ossa_yepes.docx
04 Math Machine Laerning/Sem_6/: S6TCP1_RegresionLinealEstocastica.ipynb
Micro_proyecto/Microproyecto1_grupo3/: Microproyecto1_grupo3.html  Microproyecto1_grupo3.ipynb  README.md  pyproject.toml
Micro_proyecto/Microproyecto1_grupo3/Functions/: Manifold_Learning.py  PlotResults.py  Read_Images.py  Segmentation.py  Select_K_groups.py
(+104 files in other folders)
