[tool.poetry]
name = "imagesegmentation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
scipy = "^1.12.0"
scikit-fuzzy = "^0.4.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
